# chmac

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
completions/: chmac.fish
src/: args.rs  mac.rs  main.rs
